--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ sudo: required
 services:
  - docker
 script:
- - docker build -t cloud .
+ - docker build -t myowncloud .
+after success:
+ - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+ - docker tag myowncloud $DOCKER_USER/cloud_lab
+ - docker push $DOCKER_USER/cloud_lab
